--- a/Playbooks/files/test.yml
+++ b/Playbooks/files/test.yml
@@ -1,13 +1,9 @@
 --- # Testing the J2 Template Module
-- hosts: apacheweb:debian
-  connection: ssh
-  user: test
-  sudo: yes
-  gather_facts: yes
+- hosts: lab1:lab2
   vars:
     userName: test
     userPassword: password123
     connectionType: SFTP
   tasks:
     - name: Install the configuration file customized for the system
-      template: src=test.conf.j2 dest=/home/test/test.conf owner=test group=test mode=750
+      template: src=test.conf.j2 dest=/home/ansible/test.conf owner=ansible group=ansible mode=750
